metadata/objects/graxcaseindex__x.object
<CustomObject>
    <description>graxcaseindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxcaseindex</externalName>
    <fields>
        <fullName>AF_Funded_c__c</fullName>
        <description>AF_Funded__c</description>
        <externalDeveloperName>AF_Funded__c</externalDeveloperName>
        <label>AF_Funded__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGCO_Current_Net_Price_c__c</fullName>
        <description>AGCO_Current_Net_Price__c</description>
        <externalDeveloperName>AGCO_Current_Net_Price__c</externalDeveloperName>
        <label>AGCO_Current_Net_Price__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGCO_Current_Retail_Price_c__c</fullName>
        <description>AGCO_Current_Retail_Price__c</description>
        <externalDeveloperName>AGCO_Current_Retail_Price__c</externalDeveloperName>
        <label>AGCO_Current_Retail_Price__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGCO_Power_Review_c__c</fullName>
        <description>AGCO_Power_Review__c</description>
        <externalDeveloperName>AGCO_Power_Review__c</externalDeveloperName>
        <label>AGCO_Power_Review__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>AccountId</description>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>AccountId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId_grax_xf_account__c</fullName>
        <description>AccountId_grax_xf_account</description>
        <externalDeveloperName>AccountId_grax_xf_account</externalDeveloperName>
        <label>AccountId_grax_xf_account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account_Name</description>
        <externalDeveloperName>Account_Name</externalDeveloperName>
        <label>Account_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actioned_By_c__c</fullName>
        <description>Actioned_By__c</description>
        <externalDeveloperName>Actioned_By__c</externalDeveloperName>
        <label>Actioned_By__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Taken_By_Dealer_English_c__c</fullName>
        <description>Actions_Taken_By_Dealer_English__c</description>
        <externalDeveloperName>Actions_Taken_By_Dealer_English__c</externalDeveloperName>
        <label>Actions_Taken_By_Dealer_English__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Taken_By_Dealer_c__c</fullName>
        <description>Actions_Taken_By_Dealer__c</description>
        <externalDeveloperName>Actions_Taken_By_Dealer__c</externalDeveloperName>
        <label>Actions_Taken_By_Dealer__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Part_Numbers_c__c</fullName>
        <description>Additional_Part_Numbers__c</description>
        <externalDeveloperName>Additional_Part_Numbers__c</externalDeveloperName>
        <label>Additional_Part_Numbers__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Ship_Notice_All_Locations_c__c</fullName>
        <description>Advanced_Ship_Notice_All_Locations__c</description>
        <externalDeveloperName>Advanced_Ship_Notice_All_Locations__c</externalDeveloperName>
        <label>Advanced_Ship_Notice_All_Locations__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Ship_Notice_My_Location_c__c</fullName>
        <description>Advanced_Ship_Notice_My_Location__c</description>
        <externalDeveloperName>Advanced_Ship_Notice_My_Location__c</externalDeveloperName>
        <label>Advanced_Ship_Notice_My_Location__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_Area_c__c</fullName>
        <description>Affected_Area__c</description>
        <externalDeveloperName>Affected_Area__c</externalDeveloperName>
        <label>Affected_Area__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Care_Certificate_Number_c__c</fullName>
        <description>After_Care_Certificate_Number__c</description>
        <externalDeveloperName>After_Care_Certificate_Number__c</externalDeveloperName>
        <label>After_Care_Certificate_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Care_Certificate_c__c</fullName>
        <description>After_Care_Certificate__c</description>
        <externalDeveloperName>After_Care_Certificate__c</externalDeveloperName>
        <label>After_Care_Certificate__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_1st_Submission_Date_Time_c__c</fullName>
        <description>Approval_1st_Submission_Date_Time__c</description>
        <externalDeveloperName>Approval_1st_Submission_Date_Time__c</externalDeveloperName>
        <label>Approval_1st_Submission_Date_Time__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Comment_History_c__c</fullName>
        <description>Approval_Comment_History__c</description>
        <externalDeveloperName>Approval_Comment_History__c</externalDeveloperName>
        <label>Approval_Comment_History__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Last_Action_Date_Time_c__c</fullName>
        <description>Approval_Last_Action_Date_Time__c</description>
        <externalDeveloperName>Approval_Last_Action_Date_Time__c</externalDeveloperName>
        <label>Approval_Last_Action_Date_Time__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Last_Submission_Date_Time_c__c</fullName>
        <description>Approval_Last_Submission_Date_Time__c</description>
        <externalDeveloperName>Approval_Last_Submission_Date_Time__c</externalDeveloperName>
        <label>Approval_Last_Submission_Date_Time__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Lock_c__c</fullName>
        <description>Approval_Lock__c</description>
        <externalDeveloperName>Approval_Lock__c</externalDeveloperName>
        <label>Approval_Lock__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Override_c__c</fullName>
        <description>Approval_Override__c</description>
        <externalDeveloperName>Approval_Override__c</externalDeveloperName>
        <label>Approval_Override__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status_c__c</fullName>
        <description>Approval_Status__c</description>
        <externalDeveloperName>Approval_Status__c</externalDeveloperName>
        <label>Approval_Status__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Count_c__c</fullName>
        <description>Approval_Submission_Count__c</description>
        <externalDeveloperName>Approval_Submission_Count__c</externalDeveloperName>
        <label>Approval_Submission_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_c__c</fullName>
        <description>Area__c</description>
        <externalDeveloperName>Area__c</externalDeveloperName>
        <label>Area__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assembly_Center_c__c</fullName>
        <description>Assembly_Center__c</description>
        <externalDeveloperName>Assembly_Center__c</externalDeveloperName>
        <label>Assembly_Center__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <description>AssetId</description>
        <externalDeveloperName>AssetId</externalDeveloperName>
        <label>AssetId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetId_grax_xf_asset__c</fullName>
        <description>AssetId_grax_xf_asset</description>
        <externalDeveloperName>AssetId_grax_xf_asset</externalDeveloperName>
        <label>AssetId_grax_xf_asset</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Date_c__c</fullName>
        <description>Assignment_Date__c</description>
        <externalDeveloperName>Assignment_Date__c</externalDeveloperName>
        <label>Assignment_Date__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assistance_Required_c__c</fullName>
        <description>Assistance_Required__c</description>
        <externalDeveloperName>Assistance_Required__c</externalDeveloperName>
        <label>Assistance_Required__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Usage_c__c</fullName>
        <description>Audit_Usage__c</description>
        <externalDeveloperName>Audit_Usage__c</externalDeveloperName>
        <label>Audit_Usage__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audix_c__c</fullName>
        <description>Audix__c</description>
        <externalDeveloperName>Audix__c</externalDeveloperName>
        <label>Audix__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Category_c__c</fullName>
        <description>Book_Category__c</description>
        <externalDeveloperName>Book_Category__c</externalDeveloperName>
        <label>Book_Category__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Code_c__c</fullName>
        <description>Book_Code__c</description>
        <externalDeveloperName>Book_Code__c</externalDeveloperName>
        <label>Book_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Origin_c__c</fullName>
        <description>Book_Origin__c</description>
        <externalDeveloperName>Book_Origin__c</externalDeveloperName>
        <label>Book_Origin__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Sub_Category_c__c</fullName>
        <description>Book_Sub_Category__c</description>
        <externalDeveloperName>Book_Sub_Category__c</externalDeveloperName>
        <label>Book_Sub_Category__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Title_c__c</fullName>
        <description>Book_Title__c</description>
        <externalDeveloperName>Book_Title__c</externalDeveloperName>
        <label>Book_Title__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_c__c</fullName>
        <description>Box__c</description>
        <externalDeveloperName>Box__c</externalDeveloperName>
        <label>Box__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code_c__c</fullName>
        <description>Brand_Code__c</description>
        <externalDeveloperName>Brand_Code__c</externalDeveloperName>
        <label>Brand_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_c__c</fullName>
        <description>Brand__c</description>
        <externalDeveloperName>Brand__c</externalDeveloperName>
        <label>Brand__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser_Language_c__c</fullName>
        <description>Browser_Language__c</description>
        <externalDeveloperName>Browser_Language__c</externalDeveloperName>
        <label>Browser_Language__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser_Version_c__c</fullName>
        <description>Browser_Version__c</description>
        <externalDeveloperName>Browser_Version__c</externalDeveloperName>
        <label>Browser_Version__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Approver_c__c</fullName>
        <description>Budget_Approver__c</description>
        <externalDeveloperName>Budget_Approver__c</externalDeveloperName>
        <label>Budget_Approver__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Process_Alert_Email_1_c__c</fullName>
        <description>Build_Process_Alert_Email_1__c</description>
        <externalDeveloperName>Build_Process_Alert_Email_1__c</externalDeveloperName>
        <label>Build_Process_Alert_Email_1__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Process_Alert_Email_2_c__c</fullName>
        <description>Build_Process_Alert_Email_2__c</description>
        <externalDeveloperName>Build_Process_Alert_Email_2__c</externalDeveloperName>
        <label>Build_Process_Alert_Email_2__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Process_Alert_Email_3_c__c</fullName>
        <description>Build_Process_Alert_Email_3__c</description>
        <externalDeveloperName>Build_Process_Alert_Email_3__c</externalDeveloperName>
        <label>Build_Process_Alert_Email_3__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId__c</fullName>
        <description>BusinessHoursId</description>
        <externalDeveloperName>BusinessHoursId</externalDeveloperName>
        <label>BusinessHoursId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId_grax_xf_businesshours__c</fullName>
        <description>BusinessHoursId_grax_xf_businesshours</description>
        <externalDeveloperName>BusinessHoursId_grax_xf_businesshours</externalDeveloperName>
        <label>BusinessHoursId_grax_xf_businesshours</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessHours_Name__c</fullName>
        <description>BusinessHours_Name</description>
        <externalDeveloperName>BusinessHours_Name</externalDeveloperName>
        <label>BusinessHours_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Manager_c__c</fullName>
        <description>Business_Manager__c</description>
        <externalDeveloperName>Business_Manager__c</externalDeveloperName>
        <label>Business_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_c__c</fullName>
        <description>Buyer__c</description>
        <externalDeveloperName>Buyer__c</externalDeveloperName>
        <label>Buyer__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_AGCO_User_c__c</fullName>
        <description>CC_AGCO_User__c</description>
        <externalDeveloperName>CC_AGCO_User__c</externalDeveloperName>
        <label>CC_AGCO_User__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_c__c</fullName>
        <description>CSAT__c</description>
        <externalDeveloperName>CSAT__c</externalDeveloperName>
        <label>CSAT__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Instructions_c__c</fullName>
        <description>CS_Instructions__c</description>
        <externalDeveloperName>CS_Instructions__c</externalDeveloperName>
        <label>CS_Instructions__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Log_c__c</fullName>
        <description>Call_Log__c</description>
        <externalDeveloperName>Call_Log__c</externalDeveloperName>
        <label>Call_Log__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_c__c</fullName>
        <description>Caller__c</description>
        <externalDeveloperName>Caller__c</externalDeveloperName>
        <label>Caller__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Approval_c__c</fullName>
        <description>Campaign_Approval__c</description>
        <externalDeveloperName>Campaign_Approval__c</externalDeveloperName>
        <label>Campaign_Approval__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date_c__c</fullName>
        <description>Cancellation_Date__c</description>
        <externalDeveloperName>Cancellation_Date__c</externalDeveloperName>
        <label>Cancellation_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier_c__c</fullName>
        <description>Carrier__c</description>
        <externalDeveloperName>Carrier__c</externalDeveloperName>
        <label>Carrier__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <description>CaseNumber</description>
        <externalDeveloperName>CaseNumber</externalDeveloperName>
        <label>CaseNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Backorder_Count_c__c</fullName>
        <description>Case_Backorder_Count__c</description>
        <externalDeveloperName>Case_Backorder_Count__c</externalDeveloperName>
        <label>Case_Backorder_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Backorder_c__c</fullName>
        <description>Case_Backorder__c</description>
        <externalDeveloperName>Case_Backorder__c</externalDeveloperName>
        <label>Case_Backorder__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Classification_c__c</fullName>
        <description>Case_Classification__c</description>
        <externalDeveloperName>Case_Classification__c</externalDeveloperName>
        <label>Case_Classification__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Body_c__c</fullName>
        <description>Case_Comment_Body__c</description>
        <externalDeveloperName>Case_Comment_Body__c</externalDeveloperName>
        <label>Case_Comment_Body__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Count_c__c</fullName>
        <description>Case_Comment_Count__c</description>
        <externalDeveloperName>Case_Comment_Count__c</externalDeveloperName>
        <label>Case_Comment_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_History_c__c</fullName>
        <description>Case_Comment_History__c</description>
        <externalDeveloperName>Case_Comment_History__c</externalDeveloperName>
        <label>Case_Comment_History__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Comment_NEW_c__c</fullName>
        <description>Case_Comment_NEW__c</description>
        <externalDeveloperName>Case_Comment_NEW__c</externalDeveloperName>
        <label>Case_Comment_NEW__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_c__c</fullName>
        <description>Case_Owner__c</description>
        <externalDeveloperName>Case_Owner__c</externalDeveloperName>
        <label>Case_Owner__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Snapshots_c__c</fullName>
        <description>Case_Snapshots__c</description>
        <externalDeveloperName>Case_Snapshots__c</externalDeveloperName>
        <label>Case_Snapshots__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Summary_Code_c__c</fullName>
        <description>Case_Summary_Code__c</description>
        <externalDeveloperName>Case_Summary_Code__c</externalDeveloperName>
        <label>Case_Summary_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Summary_Failure_Area_c__c</fullName>
        <description>Case_Summary_Failure_Area__c</description>
        <externalDeveloperName>Case_Summary_Failure_Area__c</externalDeveloperName>
        <label>Case_Summary_Failure_Area__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Summary_Failure_Defect_c__c</fullName>
        <description>Case_Summary_Failure_Defect__c</description>
        <externalDeveloperName>Case_Summary_Failure_Defect__c</externalDeveloperName>
        <label>Case_Summary_Failure_Defect__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Summary_Failure_SubArea_c__c</fullName>
        <description>Case_Summary_Failure_SubArea__c</description>
        <externalDeveloperName>Case_Summary_Failure_SubArea__c</externalDeveloperName>
        <label>Case_Summary_Failure_SubArea__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Summary_GFC_c__c</fullName>
        <description>Case_Summary_GFC__c</description>
        <externalDeveloperName>Case_Summary_GFC__c</externalDeveloperName>
        <label>Case_Summary_GFC__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Survey_URL_c__c</fullName>
        <description>Case_Survey_URL__c</description>
        <externalDeveloperName>Case_Survey_URL__c</externalDeveloperName>
        <label>Case_Survey_URL__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_c__c</fullName>
        <description>Category__c</description>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_of_Query_Owner_Time_c__c</fullName>
        <description>Change_of_Query_Owner_Time__c</description>
        <externalDeveloperName>Change_of_Query_Owner_Time__c</externalDeveloperName>
        <label>Change_of_Query_Owner_Time__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Changes_Working_in_Merge_and_UAT_c__c</fullName>
        <description>Changes_Working_in_Merge_and_UAT__c</description>
        <externalDeveloperName>Changes_Working_in_Merge_and_UAT__c</externalDeveloperName>
        <label>Changes_Working_in_Merge_and_UAT__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changing_to_BP_c__c</fullName>
        <description>Changing_to_BP__c</description>
        <externalDeveloperName>Changing_to_BP__c</externalDeveloperName>
        <label>Changing_to_BP__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_c__c</fullName>
        <description>Channel__c</description>
        <externalDeveloperName>Channel__c</externalDeveloperName>
        <label>Channel__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Title_c__c</fullName>
        <description>Chapter_Title__c</description>
        <externalDeveloperName>Chapter_Title__c</externalDeveloperName>
        <label>Chapter_Title__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <description>ClosedDate</description>
        <externalDeveloperName>ClosedDate</externalDeveloperName>
        <label>ClosedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClosedDate_c__c</fullName>
        <description>ClosedDate__c</description>
        <externalDeveloperName>ClosedDate__c</externalDeveloperName>
        <label>ClosedDate__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClosedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ClosedOnCreate</description>
        <externalDeveloperName>ClosedOnCreate</externalDeveloperName>
        <label>ClosedOnCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_By_Text_c__c</fullName>
        <description>Closed_By_Text__c</description>
        <externalDeveloperName>Closed_By_Text__c</externalDeveloperName>
        <label>Closed_By_Text__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_By_c__c</fullName>
        <description>Closed_By__c</description>
        <externalDeveloperName>Closed_By__c</externalDeveloperName>
        <label>Closed_By__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closer_c__c</fullName>
        <description>Closer__c</description>
        <externalDeveloperName>Closer__c</externalDeveloperName>
        <label>Closer__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Lock_c__c</fullName>
        <description>Closing_Lock__c</description>
        <externalDeveloperName>Closing_Lock__c</externalDeveloperName>
        <label>Closing_Lock__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Locked_By_c__c</fullName>
        <description>Closing_Locked_By__c</description>
        <externalDeveloperName>Closing_Locked_By__c</externalDeveloperName>
        <label>Closing_Locked_By__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closure_Reason_c__c</fullName>
        <description>Closure_Reason__c</description>
        <externalDeveloperName>Closure_Reason__c</externalDeveloperName>
        <label>Closure_Reason__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Required_c__c</fullName>
        <description>Code_Required__c</description>
        <externalDeveloperName>Code_Required__c</externalDeveloperName>
        <label>Code_Required__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collation_c__c</fullName>
        <description>Collation__c</description>
        <externalDeveloperName>Collation__c</externalDeveloperName>
        <label>Collation__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Creator_ID_c__c</fullName>
        <description>Comment_Creator_ID__c</description>
        <externalDeveloperName>Comment_Creator_ID__c</externalDeveloperName>
        <label>Comment_Creator_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Creator_c__c</fullName>
        <description>Comment_Creator__c</description>
        <externalDeveloperName>Comment_Creator__c</externalDeveloperName>
        <label>Comment_Creator__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Issue_c__c</fullName>
        <description>Commercial_Issue__c</description>
        <externalDeveloperName>Commercial_Issue__c</externalDeveloperName>
        <label>Commercial_Issue__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Contact_Match_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Community_Contact_Match__c</description>
        <externalDeveloperName>Community_Contact_Match__c</externalDeveloperName>
        <label>Community_Contact_Match__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comparable_Part_c__c</fullName>
        <description>Comparable_Part__c</description>
        <externalDeveloperName>Comparable_Part__c</externalDeveloperName>
        <label>Comparable_Part__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name_c__c</fullName>
        <description>Competitor_Name__c</description>
        <externalDeveloperName>Competitor_Name__c</externalDeveloperName>
        <label>Competitor_Name__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Net_Price_c__c</fullName>
        <description>Competitor_Net_Price__c</description>
        <externalDeveloperName>Competitor_Net_Price__c</externalDeveloperName>
        <label>Competitor_Net_Price__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Part_c__c</fullName>
        <description>Competitor_Part__c</description>
        <externalDeveloperName>Competitor_Part__c</externalDeveloperName>
        <label>Competitor_Part__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Retail_Price_c__c</fullName>
        <description>Competitor_Retail_Price__c</description>
        <externalDeveloperName>Competitor_Retail_Price__c</externalDeveloperName>
        <label>Competitor_Retail_Price__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Supporting_Material_c__c</fullName>
        <description>Competitor_Supporting_Material__c</description>
        <externalDeveloperName>Competitor_Supporting_Material__c</externalDeveloperName>
        <label>Competitor_Supporting_Material__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Order_Qty_if_Price_Adjusted_c__c</fullName>
        <description>Confirmed_Order_Qty_if_Price_Adjusted__c</description>
        <externalDeveloperName>Confirmed_Order_Qty_if_Price_Adjusted__c</externalDeveloperName>
        <label>Confirmed_Order_Qty_if_Price_Adjusted__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_To_Dealer_c__c</fullName>
        <description>Connection_To_Dealer__c</description>
        <externalDeveloperName>Connection_To_Dealer__c</externalDeveloperName>
        <label>Connection_To_Dealer__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>ContactEmail</description>
        <externalDeveloperName>ContactEmail</externalDeveloperName>
        <label>ContactEmail</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFax__c</fullName>
        <description>ContactFax</description>
        <externalDeveloperName>ContactFax</externalDeveloperName>
        <label>ContactFax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>ContactId</description>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>ContactId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId_grax_xf_contact__c</fullName>
        <description>ContactId_grax_xf_contact</description>
        <externalDeveloperName>ContactId_grax_xf_contact</externalDeveloperName>
        <label>ContactId_grax_xf_contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMobile__c</fullName>
        <description>ContactMobile</description>
        <externalDeveloperName>ContactMobile</externalDeveloperName>
        <label>ContactMobile</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>ContactPhone</description>
        <externalDeveloperName>ContactPhone</externalDeveloperName>
        <label>ContactPhone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Contact_Name</description>
        <externalDeveloperName>Contact_Name</externalDeveloperName>
        <label>Contact_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_c__c</fullName>
        <description>Cost__c</description>
        <externalDeveloperName>Cost__c</externalDeveloperName>
        <label>Cost__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Referrals_c__c</fullName>
        <description>Course_Referrals__c</description>
        <externalDeveloperName>Course_Referrals__c</externalDeveloperName>
        <label>Course_Referrals__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByAlias__c</fullName>
        <description>CreatedByAlias</description>
        <externalDeveloperName>CreatedByAlias</externalDeveloperName>
        <label>CreatedByAlias</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>